adicionando idea no gitignore e alteração no schedule

--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="content">
-                <table>
+                <table summary="Tabela contendo informações sobre valores  dos serviços de acordo com dia da semana.">
             <thead>
                 <tr>
                     <th>Serviço</th>
